fix: project name

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>เมื่อไหร่ 3C KMUTT จะสิ้นสุด</title>
-  <meta name="title" content="เมื่อไหร่ 3C KKMUTT จะสิ้นสุด?" />
-  <meta name="description" content="นับเวลาถอยหลังถึงวันส่งมอบ 3C KMUTT" />
+  <title>เมื่อไหร่ C3 KMUTT จะสิ้นสุด</title>
+  <meta name="title" content="เมื่อไหร่ C3 KKMUTT จะสิ้นสุด?" />
+  <meta name="description" content="นับเวลาถอยหลังถึงวันส่งมอบ C3 KMUTT" />
 
   <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap" rel="stylesheet" />
 
@@ -80,7 +80,7 @@
     }
 
     .slot .label {
-      font-size: 1em;
+      font-size: 1.25em;
       margin-top: 16px;
 
       color: #333;
@@ -135,7 +135,7 @@
 <body>
   <div class="container">
     <h1 class="heading">
-      เหลือเวลาทำ 3C KMUTT อีก
+      คุณเหลือเวลาทำ Project C3 KMUTT อีก
     </h1>
 
     <div class="countdown">
